fix: Conserta gaps na tela de propostas

--- a/app/packs/stylesheets/custom/attachments.scss
+++ b/app/packs/stylesheets/custom/attachments.scss
@@ -122,5 +122,4 @@
   justify-content: center;
   flex-direction: column;
   border-radius: 10px;
-  padding: 1rem;
 }
